# libMCellPP

./: .gitignore  .project  README.md  StorageClasses.h  libMCell.cpp  libMCell.h  libMCell.i  makefile  mcell_main.cpp  mcell_simple.cpp  mcell_simple_count.cpp  rng.cpp  rng.h  toy_scheduler.cpp
api_prototype/: README.md
api_prototype/adam/: test_01.bngl  test_01.mdl  test_01.pmdl  test_01.py  test_10_dynamic_changes.py
api_prototype/bob/: README.md  Test_Data_Model.json  libMCellDM.py  moderate_model.json  moderate_model_plus.json  test_1_unbounded_diffusion.py  test_2_1d_diffusion.py  test_3_2d_diffusion_sheets.py  test_4_2d_diffusion.py  test_5_volumetric_diffusion.py  test_6_box_with_reactions.py  test_7_box_surface_reactions.py
api_prototype/greg/: api.cc
api_prototype/jacob/: ex01_unbounded_diffusion.py  ex02_1d_diffusion.py  ex03_2D_btwn_sheets.py  ex04_2d_diff.py  ex05_voldiff_in_box.py  ex06_rxn_in_box.py  ex07_rxn_on_surf.py  ex08_surf_class.py  ex09_complex_geom.py  ex10_dynamics_change_rate.py  ex11_counting.py  ex1_unbounded_diffusion.py  ex2.py  ex2_1d_diffusion.py  ex5_voldiff_in_box.py  ex6_rxn_in_box.py  ex7_rxn_on_surf.py  ex8_surf_class.py  pymcell.py  run_all.py  tube.py
api_prototype/leo/: README.md  api_reference_guide.py  test_01_unbounded_diffusion.py  test_02_1d_diffusion.py  test_03_2d_diffusion_sheets.py  test_04_2d_diffusion_surface.py  test_05_3d_diffusion.py  test_06_3d_reactions.py  test_07_3d_surface.py  test_08_surface_classes.py  test_09_complex_geometry.py  test_10_dynamic_diffusion.py  test_10_dynamic_geometry.py  test_10_dynamic_reaction.py  test_11_counting.py
api_prototype/mariam/: 1D_diffusion.py  2D_diffusion_between_sheets.py  2D_diffusion_real.py  Box_of_A&B_reactions_a.py  Box_of_A&B_reactions_b.py  Box_of_A&B_reactions_c.py  Box_of_A&B_surface_reaction.py  Surface_class_a.py  Umbounded diffusion.py  Volumetric_diffusion.py
api_prototype/oliver/: README.md  pymcell_species_objects.py  test_10_dynamic_diffusion_constants.py  test_10_dynamic_geometry.py  test_10_dynamic_rate_constants.py  test_11_counting_surface.py  test_11_counting_volume.py  test_1_unbounded_diffusion.py  test_2_1d_diffusion.py  test_3_2d_diffusion_sheets.py  test_4_2d_diffusion.py  test_5_volumetric_diffusion.py  test_6_box_with_reactions.py  test_7_box_surface_reactions.py  test_8_surface_classes.py  test_9_complex_geometry.py
api_prototype/tom/: 2D_diffusion_2D.py  2D_diffusion_3D.py  2D_reaction_diffusion.py  3D_diffusion.py  3D_reaction_diffusion.py  counting.py  dynamic_geom.py  pyMCell_proto.py  surface_classes.py  test.py  unbounded_diffusion.py  variable_rates.py
api_prototype_2020/: README.md
api_prototype_2020/Mariam/: BNGL_example_model.py  bngl_example_model.bngl  bngl_proposal.py  bngl_proposal_explicit.py  my_model.py
api_prototype_2020/bng_species_and_rxns/: bngl_proposal_bngl_syntax.py  (+3 more)
api_prototype_2020/cpp_subscriber_observer/example_cpp/: CMakeLists.txt
api_prototype_2020/cpp_subscriber_observer/example_cpp/src/: example.cpp
api_prototype_2020/cpp_subscriber_observer/pymcell/: CMakeLists.txt  README.md
api_prototype_2020/cpp_subscriber_observer/pymcell/libmcell/: CMakeLists.txt  README.md
api_prototype_2020/cpp_subscriber_observer/pymcell/libmcell/include/libmcell_bits/: model.hpp  model_rxn_ifce.hpp  rxn.hpp
api_prototype_2020/cpp_subscriber_observer/pymcell/libmcell/src/: model.cpp  rxn.cpp
api_prototype_2020/cpp_subscriber_observer/pymcell/python/: model.cpp  model_rxn_ifce.hpp  pymcell.cpp  rxn.cpp
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/: CMakeLists.txt
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/libmcell/: CMakeLists.txt
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/libmcell/include/: libmcell
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/libmcell/include/libmcell_bits/: geometry.hpp  model.hpp  model_geometry_ifce.hpp  model_rxn_ifce.hpp  model_species_ifce.hpp  result_timestep.hpp  rxn.hpp  species.hpp
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/libmcell/src/: geometry.cpp  model.cpp  result_timestep.cpp  rxn.cpp  species.cpp
api_prototype_2020/oliver_synaptic_calcium_full/pymcell/python/: model.cpp  pymcell.cpp  rxn.cpp  species.cpp
docs/: index.html
wiki/: README.md  model.md
(+66 files in other folders)
